--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -36,10 +36,10 @@ In this version, the entire family of sant mat groups is on a single
 mind map.
       
 <ul>
-<li><a href=metaphysics/surat-shabd-yoga/ssy_flash.html>Flash
+<li><a href=surat-shabd-yoga/ssy_flash.html>Flash
     version</a> - click on the nodes to open/close them. <B>IMPORTANT</B> - if a node has a circle on the end, you must click on it to expand it! Click on the
     arrows to visit the website for that group.
-<li><a href=metaphysics/surat-shabd-yoga/ssy_xhtml.html>XHTML
+<li><a href=surat-shabd-yoga/ssy_xhtml.html>XHTML
     version</a> - click on the plus/minus to open/close them
 </ul>
 
@@ -135,6 +135,31 @@ He fought a number of social battles as well as writing a number of Shabad texts
       </div>
 
 
+      <hr>
+
+      <div class="title">
+      <a name="nerdplane">	Thee realms ov Thee Internet.</a>
+
+	<div class="subtitle">
+	Various cool Sant Mat hangouts on the internet for your physical plane playing. 
+	</div>
+      </div>
+	<li>
+	  <a href=http://3108.info/>W.C. Vetsch</a> is a superman when it comes to melding Eastern and Western viewpoints on Sant Mat and related fields such as conspiracy theory, hard logic, high magick, math, gnosticism and fringe science. His <a href=http://3108.info/eom/EOM.pdf>Essentials of Mysticism</a> is a master work. He's the only person whose grasp of the inner and outer is strong enough to remind me of Maximilian Sandor (aka Joachim Steingrubner).
+	</li>
+
+	<li>
+	  <a href=http://groups.yahoo.com/group/SFS/>Spiritual Freedom Satsang</a> is where I get my email on. Here you will find Michael Turner, the hippest hippie Sant Mat guru on Planet Earth. Who else is pro-marijuana and meat-eating in the Sant Mat community? Oh me... puff, puff, chomp, chomp (grin).
+	</li>
+<li>
+<a href=http://soundcurrentrider.com>Sound Current Rider</a> is a site crafted with vision. This site was made from a mental blueprint. Not randomly thrown together. The only problem is, it's such a nice site, you want to quit looking at it and return to the inner (grin).
+
+<li>
+  When searching for Sant Mat and related items, be sure to use <a href=http://duckduckgo.com/?t=terrencebrannon>Duck Duck Go</a>, a very nice search engine.</li>
+
+      </div>
+
+
 
       <hr>
       <div >
@@ -146,7 +171,7 @@ He fought a number of social battles as well as writing a number of Shabad texts
 
 
       <div>
-      Feel free to <a href=mailto:metaperl@gmail.com>contact me!</a>
+      Feel free to <a href=mailto:metaperl@gmail.com>contact me!</a> and <a href=http://www.livingcosmos.org/who-am-i/>get to know me</a>
       </div>
       
     </div>
