--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -171,7 +171,15 @@ He fought a number of social battles as well as writing a number of Shabad texts
 
 
       <div>
-      Feel free to <a href=mailto:metaperl@gmail.com>contact me!</a> and <a href=http://www.livingcosmos.org/who-am-i/>get to know me</a>
+      Feel free to <a href=mailto:metaperl@gmail.com>contact me!</a> and <a href=http://www.livingcosmos.org/who-am-i/>get to know me.</a>
+<p>
+Oh and I forgot to mention:
+<a href="http://validator.w3.org/checklink/checklink?uri=http%3A%2F%2Fsantmat.livingcosmos.org&hide_type=all&recursive=on&depth=3&check=Check">
+  <img src="http://www.w3.org/QA/Tools/I_heart_validator_lg">
+</a>
+</p>
+
+
       </div>
       
     </div>
