using Freeplane now. Added Judith Lamb-Lion

--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -23,31 +23,41 @@
     <span class="subtitle">The History of Man's Excursions into
     Inner Light and Sound</span></p>
 
-    <h3>Version 3</h3>This version was done using <a href=
-    "http://freemind.sf.net">FreeMind</a>. You are welcome to
+    <h3>Version 4</h3>Farewell <a href=
+    "http://freemind.sf.net">FreeMind</a>, hello <a href="http://freeplane.sf.net">Freeplane</a>. Freeplane is the new version of freemind. The data file format is compatible between the two programs. You are welcome to
     obtain <a href="http://www.github.com/metaperl/metaphysics">the
     source</a> and create your own version. Or submit corrections
     to me (there has been some mention of inaccuracies).
 
-    <p>In this version, the entire family of sant mat groups is on
-    a single mind map.</p>
-
     <ul>
-      <li><a href="surat-shabd-yoga/ssy_flash.html">Flash
-      version</a> - click on the nodes to open/close them.
-      <b>IMPORTANT</b> - if a node has a circle on the end, you
-      must click on it to expand it! Click on the arrows to visit
-      the website for that group.</li>
+ 
+     <li>
+       <a href="surat-shabd-yoga/ssy-flash.html"> Flash version</a> ... <B>IMPORTANT:</B> - click on the circles to open/close parts of the map.
+      <li>
+	<a href="surat-shabd-yoga/ssy-img-map.html">Clickable image map 
+      version</a> 
+      </li>
 
-      <li><a href="surat-shabd-yoga/ssy_xhtml.html">XHTML
-      version</a> - click on the plus/minus to open/close them</li>
+     <li>
+       <a href="surat-shabd-yoga/ssy.mm.html"> Plain HTML version</a> 
+     </li>
+
+
+
     </ul>
 
-    <h3>Version 2</h3>This version was done using <a href=
-    "http://www.mind42.com">Mind 42</a>
 
-    <p>This new lineage data breaks down into several mindmaps,
-    each containing a major lineage.</p>
+    <h3>Version 3</h3>
+
+This version was done using <a href=
+    "http://freemind.sf.net">FreeMind</a>. This was the first version where the entire family of sant mat groups is on a single mind map.
+
+    <h3>Version 2</h3>
+
+    This version was done using <a href=
+    "http://www.mind42.com">Mind 42</a>.
+In this version, the lineage data was broken down into several mindmaps,
+    each containing a major lineage.
 
     <div class="info">
       <dl>
@@ -90,19 +100,13 @@
     <h3>Version 1</h3>
 
     <div class="info">
-      <dl>
-        <dt>PDF document</dt>
-
-        <dd><a href="santmat-lineages.pdf">Download the pdf</a> to
-        view in your browser immediately.</dd>
-
-        <dt><a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>
-        source</dt>
-
-        <dd>Download the <a href="santmat-lineages.tex">.tex
-        file</a> and the <a href="santmat.bib">BibTeX file</a> to
-        build it yourself.</dd>
-      </dl>
+      <p>
+      I did this version using
+      <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>
+      but it has been swallowed up by the Law of Impermanence. 
+      I tried hard to keep it around but things rise and they fall and
+      the wheels turn and turn and turn.
+      </p>
     </div>
 
     <div class="section">
@@ -143,6 +147,11 @@
       playing.</span></p>
 
       <ul>
+
+	<li>
+	  <a href="http://www.lamblion.org/new/lamblion.org/Home.html">Judith Lamb-Lion</a> is a highly attractive Sant Mat Guru. Her <a href="http://www.lamblion.org/satsang.html">satsangs</a> are an absolute riot. 
+	</li>
+
         <li><a href="http://3108.info/">W.C. Vetsch</a> is a
         superman when it comes to melding Eastern and Western
         viewpoints on Sant Mat and related fields such as
@@ -170,6 +179,7 @@
         to use <a href=
         "http://duckduckgo.com/?t=terrencebrannon">Duck Duck
         Go</a>, a very nice search engine.</li>
+
       </ul>
     </div>
 
