added Adhi Dharma. redid Eck lineage

--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -42,6 +42,10 @@
        <a href="surat-shabd-yoga/ssy.mm.html"> Plain HTML version</a> 
      </li>
 
+     <li>
+       <a href="surat-shabd-yoga/ssy.pdf"> PDF</a> 
+     </li>
+
 
 
     </ul>
