major additions thanks to Tony

--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -23,11 +23,22 @@
     <span class="subtitle">The History of Man's Excursions into
     Inner Light and Sound</span></p>
 
-    <h3>Version 4</h3>Farewell <a href=
-    "http://freemind.sf.net">FreeMind</a>, hello <a href="http://freeplane.sf.net">Freeplane</a>. Freeplane is the new version of freemind. The data file format is compatible between the two programs. You are welcome to
+    <h3>Version 4</h3>
+
+    <P>
+    Farewell <a href="http://freemind.sf.net">FreeMind</a>,
+    hello <a href="http://freeplane.sf.net">Freeplane</a>. Freeplane
+    is the new version of freemind. The data file format is compatible
+    between the two programs. You are welcome to 
     obtain <a href="http://www.github.com/metaperl/metaphysics">the
     source</a> and create your own version. Or submit corrections
-    to me (there has been some mention of inaccuracies).
+    to me (there has been some mention of inaccuracies). 
+    </P>
+<P>
+There has
+    been a request for dates to be listed. I have started adding that
+    in the notes section of the gurus.
+</P>
 
     <ul>
  
@@ -202,17 +213,36 @@ In this version, the lineage data was broken down into several mindmaps,
 	<li>
 	  Andrea Grace Diem graciously <a href="http://andrea65.tripod.com/gurutitle.html">overviewed</a> the Western systems.
 </li>
-	<li>And again, <a href="http://www.kheper.net/topics/Sant_Mat/index.html">Kheper</a> has a wealth of associative information for those still interested in populating their Akashic memory banks with more relative knowledge on Reality (not Truth, mind you).
+	<li>And
+	again, <a href="http://www.kheper.net/topics/Sant_Mat/index.html">Kheper</a>
+	has a wealth of associative information for those still
+	interested in populating their Akashic memory banks with more
+	relative knowledge on Reality (not Truth, mind you).</li>
+	<li>The <a href="http://www.ex-premie.org/papers/lineage1.htm">ex-premie
+	page on sant mat lineages</a> has some excellent data</li> 
       </ul>
 
     </div>
 
 
-    <div class="section">
+
+  <div class="section">
+    <p class="title"><a name="author" id="author">Author</a>
+    <span class="subtitle">and acknowledgements</span></p>
+
+    <P>
       <a href="eureka-society-application.pdf">Here is my
       application</a> to <a href=
       "http://www.eurekasociety.com/">The Eureka Society</a>. It
       includes lots of <a href="img/8-12-2007">pictures of me.</a>
+    </P>
+<p>
+  Many thanks to Tony Mohorovic for his copious valuable additions -
+  such as Ishwari Puri and a number of disciples of Maharishi Mehi
+  that I had not heard of.
+</p>
+      
+
     </div>
 
     <div>
