--- a/sant-mat/surat-shabd-yoga/ssy_flash.html
+++ b/sant-mat/surat-shabd-yoga/ssy_flash.html
@@ -1,5 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/><title>Surat Shabd Yoga</title><script type="text/javascript" src="./ssy_flash.html_files/flashobject.js"> </script><style type="text/css">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+<title>Surat Shabd Yoga</title>
+<script type="text/javascript" src="./ssy_flash.html_files/flashobject.js"> </script>
+<style type="text/css">
 	
 	/* hide from ie on mac \*/
 	html {
@@ -16,18 +22,24 @@
 		height: 100%;
 		margin: 0;
 		padding: 0;
-		background-color: #9999ff;
+		background-color: #ffffff;
 	}
 
-</style></head><body><div id="flashcontent">
+</style>
+</head>
+<body>
+<div id="flashcontent">
 		 Flash plugin or Javascript are turned off.
 		 Activate both  and reload to view the mindmap
-	</div><script type="text/javascript">
-		var fo = new FlashObject("./ssy_flash.html_files/visorFreemind.swf", "visorFreeMind", "100%", "100%", 6, "#9999ff");
+	</div>
+<script type="text/javascript">
+		var fo = new FlashObject("./ssy_flash.html_files/visorFreeplane.swf", "visorFreeplane", "100%", "100%", 8);
 		fo.addParam("quality", "high");
-		fo.addParam("bgcolor", "#ffffff");
+		fo.addVariable("bgcolor", 0xffffff);
 		fo.addVariable("openUrl", "_blank");
 		fo.addVariable("initLoadFile", "./ssy_flash.html_files/map.mm");
-		fo.addVariable("startCollapsedToLevel","5");
+		fo.addVariable("startCollapsedToLevel","2");
 		fo.write("flashcontent");
-	</script></body></html>
+	</script>
+</body>
+</html>
