data from pravesh

--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -23,6 +23,15 @@
     <span class="subtitle">The History of Man's Excursions into
     Inner Light and Sound</span></p>
 
+    
+    <p>There are many ancient masters of this path not listed. The
+    primary focus of this lineage chart is to help those actively
+    seeing a guru/system/path. A number of the ancient masters were
+    acknowledged by Pravesh K. Singh
+    in <a href="http://groups.yahoo.com/group/sant_santati/message/889">a
+	post of his</a>
+    </p>
+
     <h3>Version 4</h3>
 
     <P>
@@ -131,12 +140,16 @@ In this version, the lineage data was broken down into several mindmaps,
       emanate from Source.</span></p>
 
       <ul>
+        <li><a href="img/INNER-CHART_flash.jpg">The most beautiful depiction I have ever seen</a> - depicted by Aman Sandhu, webmaster of <a href=
+        "http://wayofmystics.webs.com/">The Way of Mystics</a>.
+	</li>
+
         <li><a href="img/the-santmat-worlds.jpg">The Sant Mat
         Realms</a> as depicted by <a href=
         "http://www.thewayofsages.com/">Santsevi Ji Maharaj</a>
         .</li>
 
-        <li><a href="chart.pdf">Another depiction</a> (quite
+        <li><a href="img/chart.pdf">Another depiction</a> (quite
         striking) by <a href="http://www.arranstephens.com/">Arran
         Stephens</a>.</li>
 
