--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -257,7 +257,7 @@
 	    <li>Tony Mohorovic</li>
 	    <li>robert s</li>
 	    <li>Michael Turner</li>
-	    <li>James Bean</li>
+	    <li>Pravesh K. Singh</li>
 	  </ul>
 
 	</p>
