changes to lineage

--- a/sant-mat/index.html
+++ b/sant-mat/index.html
@@ -176,8 +176,9 @@
 
 	<ul>
 
-	  <li>
-	    <a href="http://www.lamblion.org/new/lamblion.org/Home.html">Judith Lamb-Lion</a> is a highly attractive Sant Mat Guru. Her <a href="http://www.lamblion.org/satsang.html">satsangs</a> are an absolute riot. 
+	  <li>I now place all the links I find interesting
+	    at <a href="http://www.reddit.com/r/sant_mat/">the Sant
+	  Mat reddit</a> 
 	  </li>
 
           <li><a href="http://3108.info/">W.C. Vetsch</a> is a
@@ -195,7 +196,11 @@
             will find Michael Turner, the hippest hippie Sant Mat guru
             on Planet Earth. Who else is pro-marijuana and meat-eating
             in the Sant Mat community? Oh me... puff, puff, chomp,
-            chomp (grin).</li>
+            chomp (grin).
+	    <a href="http://groups.yahoo.com/group/sant_santati/">Sant
+	    Santati</a> is also an excellent group with very uptone
+	    participants. 
+	  </li>
 
           <li><a href="http://soundcurrentrider.com">Sound Current
               Rider</a> is a site crafted with vision. This site was made
